--- a/UnitTestProject1/UnitTestsMail.csproj
+++ b/UnitTestProject1/UnitTestsMail.csproj
@@ -96,6 +96,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Pages\BasePage.cs" />
     <Compile Include="Pages\LoginPage.cs" />
     <Compile Include="MailTest.cs" />
     <Compile Include="Pages\MessagePage.cs" />
@@ -103,6 +104,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BaseMailTest.cs" />
     <Compile Include="WebDriverUtil.cs" />
+    <Compile Include="WebDriverWaitUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
