--- a/UnitTestProject1/packages.config
+++ b/UnitTestProject1/packages.config
@@ -1,13 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BoDi" version="1.4.1" targetFramework="net472" />
+  <package id="Gherkin" version="6.0.0" targetFramework="net472" />
   <package id="ICSharpCode.NRefactory" version="5.5.1" targetFramework="net472" />
   <package id="Mono.Cecil" version="0.9.5.4" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net472" />
   <package id="NUnit" version="3.12.0" targetFramework="net472" />
+  <package id="NUnit.Console" version="3.9.0" targetFramework="net472" />
+  <package id="NUnit.ConsoleRunner" version="3.9.0" targetFramework="net472" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net472" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net472" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net472" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.3" targetFramework="net472" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.8.0" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="3.15.1" targetFramework="net472" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver.ChromeDriver" version="76.0.3809.12600" targetFramework="net472" />
+  <package id="SpecFlow" version="3.0.225" targetFramework="net472" />
+  <package id="SpecFlow.NUnit" version="3.0.225" targetFramework="net472" />
+  <package id="SpecFlow.NUnit.Runners" version="3.0.225" targetFramework="net472" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net472" />
+  <package id="Utf8Json" version="1.3.7" targetFramework="net472" />
   <package id="WatiN" version="2.1.0" targetFramework="net472" />
 </packages>
